[tool.poetry]
name = "aula08_bootcamp"
version = "0.1.0"
description = ""
authors = ["ermesonf <ermeson.freitas@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandera = "^0.18.0"
pandas = "^2.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
